Bug 164499 - Smart justify in ToC: squashed too many spaces in order to fit on one line - should be two lines. [Forbid space shrinking in lines with tabulators]
Summary: Smart justify in ToC: squashed too many spaces in order to fit on one line - ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Smart-Justify
  Show dependency treegraph
 
Reported: 2024-12-28 01:09 UTC by Justin L
Modified: 2025-04-13 14:13 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
forum-mso-de-96135.docx: ToC entry 2.5.5 exceeds justify area (26.47 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-12-28 01:09 UTC, Justin L
Details
forum-mso-de-96135.docx_mso.pdf: how it looks in Word 2019 (61.29 KB, application/pdf)
2024-12-28 01:09 UTC, Justin L
Details
forum-mso-de-96135.pdf: how page 1 looks like in 25.8 master (63.45 KB, application/pdf)
2024-12-28 13:04 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2024-12-28 01:09:05 UTC
Created attachment 198303 [details]
forum-mso-de-96135.docx: ToC entry 2.5.5 exceeds justify area

I finally found another smart justify regression.
Steps to reproduce
1.) open forum-mso-de-96135.docx

Notice on the first page that the TOC entry for 2.5.5 has the page number 1 pushed outside of the text area. It (preceded by quite a few spaces) should be on another line.

This started in LO 24.2 with commit 53de98b29548ded88e0a44c80256fc5e340d551e
Author: László Németh on Thu Nov 23 14:01:10 2023 +0100
    tdf#158333 sw smart justify: fix multiple text portions
Comment 1 Justin L 2024-12-28 01:09:38 UTC
Created attachment 198304 [details]
forum-mso-de-96135.docx_mso.pdf: how it looks in Word 2019
Comment 2 Justin L 2024-12-28 13:04:07 UTC
Created attachment 198307 [details]
forum-mso-de-96135.pdf: how page 1 looks like in 25.8 master

Interestingly, points 3.3 and 3.4 might have done the same thing, but didn't.
Comment 3 László Németh 2024-12-28 17:27:04 UTC
@Justin: thanks for the report!
Comment 4 László Németh 2025-02-11 00:45:18 UTC
Proposed fix: https://gerrit.libreoffice.org/c/core/+/181397
Comment 5 Commit Notification 2025-02-11 17:27:21 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ed7fbfce0b434f7d2a5542483d2838af51958e34

tdf#164499 sw smart justify: disable in tabulated lines to fix ToC

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 László Németh 2025-02-11 17:29:08 UTC
Fixed in master. Note: it seems, this is a better fix for Bug 161810, too.
Comment 7 Commit Notification 2025-02-13 04:52:24 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/55830c147b0f2cebfa4bc4f8c271ae455e6446b5

tdf#164499 sw smart justify: disable in tabulated lines to fix ToC

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-03-03 15:29:47 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/434af9dea64f95e1d5f93a5563106b9124bb17af

tdf#164905 tdf#164499 sw smart justify: fix overlapping text in ToC

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-03-06 14:55:01 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/e336b24a99cd2bfc70d27a26274dc43e21fc60b2

tdf#164905 tdf#164499 sw smart justify: fix overlapping text in ToC

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.