tdf#164499 sw smart justify: disable in tabulated lines to fix ToC

Calculated extra text content without shrinking resulted overhanging
text lines, e.g page numbers over the margin in ToC. Fix it
by skipping space shrinking completely in tabulated lines,
restoring also interoperability.

Regression since commit 53de98b29548ded88e0a44c80256fc5e340d551e
"tdf#158333 sw smart justify: fix multiple text portions".

Change-Id: I390a254b8a47c6563d2c01a2f818f5ac6122e2ac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181397
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit ed7fbfce0b434f7d2a5542483d2838af51958e34)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181450
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>